# Autocorrect-Levenshtein

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: dictionary.h  levenshtein.h  main.h  queue.h  types.h  utils.h
src/: dictionary.c  levenshtein.c  main.c  queue.c  utils.c
